--- a/public/.htaccess
+++ b/public/.htaccess
@@ -1,2 +1,6 @@
 php_flag  display_errors        on
 php_value error_reporting       2039
+
+RewriteEngine On
+RewriteCond %{REQUEST_FILENAME} !-f
+RewriteRule ^ index.php [QSA,L]
